<resources>
    <string name="app_name">Métodos Numéricos</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="falsa_posicion">Falsa Posicion</string>
    <string name="f_x">Función</string>
    <string name="ejemplo_x_2_cos_x_exp_x_2">Ejemplo: x^2+cos(x)+exp(x^2)</string>
    <string name="var">var</string>
    <string name="f">F (</string>
    <string name="parentesis">) =</string>
    <string name="introduce_los_valores_de_a_y_b">Introduce los valores de A y B</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="limite_de_iteraciones">Limite de Iteraciones</string>
    <string name="tolerancia">Tolerancia</string>
    <string name="usar">Usar</string>
    <string name="calcular">Calcular</string>
    <string name="la_ra_z_es">La Raíz es:</string>
    <string name="x">X</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="numero_de_decimales">Numero de Decimales</string>
    <string name="_0">0</string>
    <string name="acerca_de">Acerca De La Aplicacion</string>
    <string name="creado_por_alumnos_del_instituto_tecnologico_de_apizaco">Desarrollado por alumnos del Instituto Tecnologico de Apizaco</string>
    <string name="instituto_tecnol_gico_de_apizaco">Instituto Tecnológico de Apizaco</string>
    <string name="irvin_baez_suarez">UI Designer: Irvin Baez Suarez</string>
    <string name="java_developer_gustavo_juarez_cano">Gustavo Juarez Cano</string>
    <string name="ux_designer_jhonatan_mendez_gonzales">Jhonatan Mendez Gonzales</string>
    <string name="kotlin_developer_ivan_montiel_cardona">Ivan Montiel Cardona</string>
    <string name="sample">Sample</string>
    <string name="desarrollado_por">Desarrollado por</string>
    <string name="metodos_numericos">Metodos Numericos</string>
    <string name="txt">txt</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="valor_intermedio">Biseccion</string>
    <string name="informacion_legal">Informacion Legal</string>
    <string name="ui_designer">UI Designer</string>
    <string name="irvin_baez_suare">Irvin Baez Suarez</string>
    <string name="java_developer">Java Developer</string>
    <string name="ux_designer">UX Designer</string>
    <string name="kotlin_developer">Kotlin Developer</string>
    <string name="font">Fuentes</string>
    <string name="arciform">\"Arciform\"</string>
    <string name="dise_ada_por_matt_ellis">Diseñada por Matt Ellis</string>
    <string name="iconos">Iconos</string>
    <string name="matem_ticas_hecho_por_freepik_de_www_flaticon_com">Obtenidos de www.flaticon.com</string>
    <string name="matem_ticas">\"Matemáticas\"</string>
    <string name="secante">Secante</string>
    <string name="newton_raphson">Newton-Raphson</string>
    <string name="punto_fijo">Punto Fijo</string>
    <string name="menuicon">menuicon</string>
    <string name="interpolacion_lineal">Interpolacion Lineal</string>
    <string name="inserta_los_valores_de_los_pares_ordenados">Inserta los valores de los pares ordenados</string>
    <string name="generacion_y_evaluacion_en_tiempo_real_metodos_de_interpolacion">Generacion y evaluacion del modelo en tiempo real</string>
    <string name="metodos_de_interpolacion">Metodos de Interpolacion</string>
    <string name="sympylogo">sympyLogo</string>
    <string name="copyright_c_2006_2019_sympy_development_team">Copyright © 2006–2019 SymPy Development Team</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="chaquopylogo">chaquopylogo</string>
    <string name="copyright_2018_chaquo_ltd">Copyright © 2018 Chaquo Ltd</string>
    <string name="chaquopy">Chaquopy</string>
    <string name="sympy">SymPy</string>
    <string name="gracias_por_participar_en_nuestro_progama_de_acceso_temprano">Gracias por participar</string>
    <string name="durante_la_duracion_del_programa_de_acceso_temprano_podras">Durante la ejecucion del programa de acceso temprano podrian existir errores, por favor te pedimos los reportes a la direccion de correo electronico ivan.montiel.c@gmail.com</string>
    <string name="esta_aplicacion_no_es_transferible_hasta_su_fecha_de_lanzamiento_oficial_programada_el_dia_19_de_septiembre_de_2019_a_las_9_30_horas">Esta aplicacion no es transferible hasta su fecha de lanzamiento oficial programada el dia 19 de septiembre de 2019 a las 9:30 horas</string>
    <string name="aceptar">Aceptar</string>
    <string name="valor">Valor</string>
    <string name="x1">x1</string>
    <string name="el_modelo_matematico_resultante_es">El modelo matematico resultante es:</string>
    <string name="evaluar">Evaluar</string>
    <string name="close">close</string>
    <string name="xs">X=</string>
    <string name="back">back</string>
    <string name="interpolacion_cuadratica">Interpolacion Cuadratica</string>
    <string name="interpolacion">Interpolacion</string>
    <string name="cuadratica">Cuadratica</string>
    <string name="de_newton">De Newton</string>
    <string name="que_cantidad_de_pares_ordenados_posees">¿Que cantidad de pares ordenados posees?</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantindad_de_pares">Cantindad de pares:</string>
    <string name="numero">Numero</string>
    <string name="de_lagrange">de Lagrange</string>
    <string name="minimos_cuadrados">Minimos Cuadrados</string>
    <string name="el_modelo_matematico_resultante_con_respecto_a_x_es">El modelo matematico resultante con respecto a x es:</string>
    <string name="y">y=</string>
    <string name="el_modelo_matematico_resultante_con_respecto_a_y_es">El modelo matematico resultante con respecto a y es:</string>
    <string name="redistribution_and_use_in_source_and_binary_forms_with_or_without_modification_are_permitted_provided_that_the_following_conditions_are_met">Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</string>
    <string name="a_redistributions_of_source_code_must_retain_the_above_copyright_notice_this_list_of_conditions_and_the_following_disclaimer">a. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.</string>
    <string name="b_redistributions_in_binary_form_must_reproduce_the_above_copyright_notice_this_list_of_conditions_and_the_following_disclaimer_in_the_documentation_and_or_other_materials_provided_with_the_distribution">b. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.</string>
    <string name="c_neither_the_name_of_sympy_nor_the_names_of_its_contributors_may_be_used_to_endorse_or_promote_products_derived_from_this_software_without_specific_prior_written_permission">c. Neither the name of SymPy nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.</string>
    <string name="this_software_is_provided_by_the_copyright_holders_and_contributors_as_is_and_any_express_or_implied_warranties_including_but_not_limited_to_the_implied_warranties_of_merchantability_and_fitness_for_a_particular_purpose_are_disclaimed_in_no_event_shall_the_regents_or_contributors_be_liable_for_any_direct_indirect_incidental_special_exemplary_or_consequential_damages_including_but_not_limited_to_procurement_of_substitute_goods_or_services_loss_of_use_data_or_profits_or_business_interruption_however_caused_and_on_any_theory_of_liability_whether_in_contract_strict_liability_or_tort_including_negligence_or_otherwise_arising_in_any_way_out_of_the_use_of_this_software_even_if_advised_of_the_possibility_of_such_damage">THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS \"AS IS\" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="habilitar_graficadora_desmos">Habilitar Graficadora (Desmos)</string>
    <string name="funcion_experimental">Minimos Cuadrados</string>
    <string name="las_soluciones_de_la_ecuacion_son">Las soluciones de la ecuacion son:</string>
    <string name="licencias">Licencias</string>
    <string name="mathview">MathView</string>
    <string name="copyright_c_2017_lingaraj_sankaravelu">Copyright © 2017 Lingaraj Sankaravelu</string>
    <string name="permission_is_hereby_granted_free_of_charge_to_any_person_obtaining_a_copy_of_this_software_and_associated_documentation_files_the_software_to_deal_in_the_software_without_restriction_including_without_limitation_the_rights_to_use_copy_modify_merge_publish_distribute_sublicense_and_or_sell_copies_of_the_software_and_to_permit_persons_to_whom_the_software_is_furnished_to_do_so_subject_to_the_following_conditions">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the Software), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</string>
    <string name="hicimos_esta_app_lo_mas_simple_posible_para_facilitar_su_uso_sin_embargo_utilizamos_una_sintaxis_especial_para_procesar_ecuaciones_he_aqui_un_ejemplo">Hicimos esta app lo mas simple posible para facilitar su uso, sin embargo, utilizamos una sintaxis especial para procesar ecuaciones, he aqui un ejemplo:</string>
    <string name="x_2_cos_x_exp_x_3_sqrt_x_2_4_pi_ln_1_x">x**2-cos(x)+exp(x**3)-sqrt(x**2-4)*pi-ln(1/x)</string>
    <string name="y_para_su_comodidad_hemos_incluido_un_interprete_para_comprobar_que_la_ecuacion_que_introdujo_tiene_la_sintaxis_correcta_considere_que_en_ocasiones_las_expresiones_pueden_simplificarse_automaticamente">Y para su comodidad hemos incluido un interprete para comprobar que la ecuacion que introdujo tiene la sintaxis correcta (considere que en ocasiones las expresiones pueden simplificarse automaticamente o no mostrarse en el orden ingresado)</string>
</resources>