<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/layout_bounded"
        android:padding="15sp"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/frst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/chaquopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/chaquopylog"
                android:src="@drawable/logochaquopy"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:textColor="#fff"
                android:contentDescription="@string/chaquopylogo" />

            <TextView
                android:layout_below="@id/chaquopylog"
                android:text="@string/chaquopy"
                android:textColor="#fff"
                android:fontFamily="@font/arciform"
                android:layout_centerInParent="true"
                android:id="@+id/titchaquopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="5sp"
                android:id="@+id/copyrightcha"
                android:text="@string/copyright_2018_chaquo_ltd"
                android:layout_centerInParent="true"
                android:textColor="#b8b8b8"
                android:layout_below="@id/titchaquopy"
                android:fontFamily="@font/arciform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_below="@id/copyrightcha"
                android:layout_centerInParent="true"
                android:text="@string/all_rights_reserved"
                android:textColor="#b8b8b8"
                android:fontFamily="@font/arciform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/chaquopy"
            android:id="@+id/sympy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sympylogo"
                android:src="@drawable/logosympy"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:textColor="#fff"
                android:contentDescription="@string/sympylogo"
                />

            <TextView
                android:layout_below="@id/sympylogo"
                android:layout_centerInParent="true"
                android:text="@string/sympy"
                android:id="@+id/titsym"
                android:textColor="#fff"
                android:fontFamily="@font/arciform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="5sp"
                android:id="@+id/copyright"
                android:text="@string/copyright_c_2006_2019_sympy_development_team"
                android:layout_centerInParent="true"
                android:layout_below="@id/titsym"
                android:fontFamily="@font/arciform"
                android:textColor="#8b8b8b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_below="@id/copyright"
                android:layout_centerInParent="true"
                android:text="@string/all_rights_reserved"
                android:fontFamily="@font/arciform"
                android:textColor="#b8b8b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/font"
            android:layout_below="@id/sympy"
            android:layout_marginTop="15sp"
            android:layout_marginStart="15sp"
            android:textColor="#fff"
            android:text="@string/font"
            android:fontFamily="@font/arciform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@id/font"
            android:id="@+id/fontname"
            android:layout_marginStart="15sp"
            android:layout_marginTop="2sp"
            android:text="@string/arciform"
            android:textColor="#b8b8b8"
            android:fontFamily="@font/arciform"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/fontmatt"
            android:text="@string/dise_ada_por_matt_ellis"
            android:layout_below="@id/fontname"
            android:layout_marginStart="15sp"
            android:fontFamily="@font/arciform"
            android:textStyle="italic"
            android:textColor="#b8b8b8"
            android:layout_width="wrap_content"
            android:layout_marginTop="2sp"
            android:layout_marginBottom="15sp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sec"
            android:layout_below="@id/frst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/icons"
            android:layout_marginTop="15sp"
            android:layout_marginStart="15sp"
            android:textColor="#ffffff"
            android:text="@string/iconos"
            android:fontFamily="@font/arciform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/matematicas"
            android:text="@string/matem_ticas_hecho_por_freepik_de_www_flaticon_com"
            android:layout_below="@id/icons"
            android:layout_marginStart="15sp"
            android:fontFamily="@font/arciform"
            android:textStyle="italic"
            android:textColor="#b8b8b8"
            android:layout_width="wrap_content"
            android:layout_marginTop="2sp"
            android:layout_marginBottom="15sp"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/licences"
        android:layout_below="@id/sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/licencias"
            android:padding="15dp"
            android:textColor="#fff"
            android:text="@string/licencias"
            android:fontFamily="@font/arciform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</RelativeLayout>