<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bounded">

    <RelativeLayout
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:layout_alignParentTop="true"
        android:id="@+id/iconapp"
        android:layout_centerInParent="true"
        android:background="@drawable/bunds_rounded"
        android:layout_width="100sp"
        android:layout_height="100sp">

        <ImageView
            android:src="@drawable/matematicas"
            android:contentDescription="@string/todo"
            android:layout_centerInParent="true"
            android:layout_width="70sp"
            android:layout_height="70sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:fontFamily="@font/arciform"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_centerInParent="true"
        android:layout_below="@id/iconapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/ter"
        android:layout_below="@id/title"
        android:layout_marginStart="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="15sp"
        android:fontFamily="@font/arciform"
        android:text="@string/hicimos_esta_app_lo_mas_simple_posible_para_facilitar_su_uso_sin_embargo_utilizamos_una_sintaxis_especial_para_procesar_ecuaciones_he_aqui_un_ejemplo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/cuar"
        android:layout_below="@id/ter"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/arciform"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:text="@string/x_2_cos_x_exp_x_3_sqrt_x_2_4_pi_ln_1_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/sec"
        android:layout_below="@id/cuar"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/y_para_su_comodidad_hemos_incluido_un_interprete_para_comprobar_que_la_ecuacion_que_introdujo_tiene_la_sintaxis_correcta_considere_que_en_ocasiones_las_expresiones_pueden_simplificarse_automaticamente"
        android:fontFamily="@font/arciform"
        android:layout_marginEnd="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_marginTop="10sp"
        android:layout_below="@id/sec"
        android:id="@+id/scrollmath"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <katex.hourglass.in.mathlib.MathView
            android:id="@+id/interpeter"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <TextView
        android:id="@+id/aceptar"
        android:padding="20sp"
        android:layout_centerInParent="true"
        android:textColor="#27aac3"
        android:text="@string/aceptar"
        android:layout_below="@id/scrollmath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>