<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@drawable/gradient"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_centerInParent="true"
                    android:layout_marginTop="30sp"
                    android:fontFamily="@font/arciform"
                    android:textSize="30sp"
                    android:text="@string/configuraciones"
                    android:textColor="#fff"
                    android:id="@+id/title"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/num"
                    android:layout_below="@id/title"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/arciform"
                    android:textColor="#fff"
                    android:padding="10sp"
                    android:layout_marginStart="5sp"
                    android:textSize="15sp"
                    android:text="@string/numero_de_decimales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/first"
                    android:layout_below="@id/num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/value"
                        android:textSize="18sp"
                        android:text="@string/x"
                        android:layout_marginStart="10sp"
                        android:fontFamily="@font/arciform"
                        android:padding="5sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/seekBar"
                        android:padding="10sp"
                        android:max="15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="10sp"
                    android:id="@+id/about"
                    android:layout_below="@id/first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:padding="10sp"
                        android:src="@drawable/ic_info"
                        android:layout_width="55sp"
                        android:layout_height="55sp"/>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/ace"
                            android:text="@string/acerca_de"
                            android:textColor="#fff"
                            android:fontFamily="@font/arciform"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_below="@id/ace"
                            android:fontFamily="@font/arciform"
                            android:text="@string/creado_por_alumnos_del_instituto_tecnologico_de_apizaco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>